--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    hello
-</body>
+﻿<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <title>Attendance Calendar | Pure javascript plugin</title>
+    <meta name="description" content="" />
+    <meta name="author" content="Jitan Gupta" />
+
+    <meta name="theme-color" content="#2e79b1" />
+    <meta name="msapplication-navbutton-color" content="#2e79b1" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#2e79b1" />
+
+    <!--Attendance Calendar Styles-->
+    <link href="dist/css/attendance-calendar.min.css" rel="stylesheet" />
+
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+    <!--Demo Styles-->
+    <link rel="stylesheet" href="demo/styles/normalize.css">
+    <link href="demo/styles/demo.css" rel="stylesheet" />
+  </head>
+  <body>
+
+    <section class="api-name">
+        <h1>Attendance Calendar</h1>
+    </section>
+
+    <div id="calender_container" class="calender_container"></div>
+
+    <script src="dist/js/attendance-calendar.js"></script>
+    <script src="demo/js/demo.js"></script>
+  </body>
 </html>
