updated readme file and demo changes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Attendance Calendar | Pure javascript plugin</title>
-    <meta name="description" content="" />
+    <title>Attendance Calendar | Pure javascript API</title>
+    <meta name="description" content="attendance-calendar helps you display employees attendance data in calendar format" />
     <meta name="author" content="Jitan Gupta" />
 
-    <meta name="theme-color" content="#2e79b1" />
-    <meta name="msapplication-navbutton-color" content="#2e79b1" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#2e79b1" />
+    <meta name="theme-color" content="#f5f5f5" />
+    <meta name="msapplication-navbutton-color" content="#f5f5f5" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f5f5f5" />
 
     <!--Attendance Calendar Styles-->
     <link href="dist/css/attendance-calendar.min.css" rel="stylesheet" />
@@ -29,9 +29,19 @@
         <h1>Attendance Calendar</h1>
     </section>
 
+    <!--Attendance Calendar Container-->
     <div id="calender_container" class="calender_container"></div>
 
-    <script src="dist/js/attendance-calendar.js"></script>
+    <!--Documentation Link-->
+    <a href="#">View Documentation</a>
+
+    <!--NPM Package-->
+    
+
+    <!--Attendance Calendar compiled JS-->
+    <script src="dist/js/attendance-calendar.min.js"></script>
+
+    <!--Demo file-->
     <script src="demo/js/demo.js"></script>
   </body>
 </html>
