--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <!--Attendance Calendar Container-->
     <div id="calender_container" class="calender_container"></div>
 
-    <!--Documentation Link-->
-    <a href="#">View Documentation</a>
-
-    <!--NPM Package-->
-    
+    <!--Helpful links-->
+    <div class="helpful-links">
+      <a href="https://github.com/jitangupta/attendance-calendar/archive/1.0.0.zip">Download</a>
+      <a href="https://github.com/jitangupta/attendance-calendar">View Documentation</a>
+    </div>
 
     <!--Attendance Calendar compiled JS-->
     <script src="dist/js/attendance-calendar.min.js"></script>
