--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--Helpful links-->
     <div class="helpful-links">
       <a href="https://github.com/jitangupta/attendance-calendar/archive/1.0.0.zip">Download</a>
-      <a href="https://github.com/jitangupta/attendance-calendar">View Documentation</a>
+      <a href="https://github.com/jitangupta/attendance-calendar#readme">View Documentation</a>
     </div>
 
     <!--Attendance Calendar compiled JS-->
